Rightpanel Deletebutton & chatpannel Backgroundborder / Scrollbar fix

--- a/src/app/chat.panel/chat.panel.component.css
+++ b/src/app/chat.panel/chat.panel.component.css
@@ -84,7 +84,6 @@ background: rgba(0,0,0,.1);
   grid-row: 2 / 3;
   grid-column: 1 / 2;
   display: grid;
-  height: 65px;
   grid-template-columns: auto 1fr auto;
 }
 
@@ -94,14 +93,26 @@ background: rgba(0,0,0,.1);
 
 .senden-container #input-chatmessages {
   width: 100%;
+  align-self: center;
+  max-height: 76px;
+  overflow: auto;
+  padding: 0 10px 0 0;
+}
+
+.chatmessage-container {
+  width: 100%;
   border-radius: 25px;
   border: none;
   padding: 15px 20px;
   min-height: 38px;
   align-self: center;
-  max-height: 80px;
-  overflow: auto;
+  max-height: 106px;
   background: #fff;
+  display: inherit;
+}
+
+.open .chatmessage-container {
+margin: 10px 0 0 0;
 }
 
 .senden-container #input-chatmessages:focus {
