--- a/src/styles.css
+++ b/src/styles.css
@@ -26,6 +26,7 @@ body {
     --main-green: #00BFA5;
     --dark-green: #009688;
     --text-black: #333;
+    --red:#d70000;
 }
 
 .return-icon{
